--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -30,3 +30,12 @@ jobs:
     - name: Test
       run: go test -v ./...
       
+  race:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '1.25'
+      - name: Run race detector
+        run: go test -race ./...
