--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -22,16 +22,28 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.25'
+        go-version-file: go.mod
+        cache: true
 
     - name: Build
-      run: go build -v ./cmd/folderflow/main.go
+      run: go build -trimpath -ldflags="-s -w"
 
     - name: Test
       run: go test -v ./...
+
+    - name: Lint
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: latest
+        args: --timeout=5m
+
       
   race:
     runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'pull_request'
+
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
