--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,52 +1,91 @@
-name: Build and Release
+name: Release
+
 on:
   push:
     tags:
-      - '*'  # Trigger on any tag push
+      - 'v*'
+
 
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v3
+        include:
+          - runner: ubuntu-latest
+            goos: linux
+            arch: amd64
+            ext: ""
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+          - runner: ubuntu-latest
+            goos: linux
+            arch: arm64
+            ext: ""
+
+          - runner: windows-latest
+            goos: windows
+            arch: amd64
+            ext: ".exe"
+
+          - runner: macos-latest
+            goos: darwin
+            arch: amd64
+            ext: ""
+
+          - runner: macos-latest
+            goos: darwin
+            arch: arm64
+            ext: ""
+
+    runs-on: ${{ matrix.runner }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v4
         with:
-          go-version: '1.25'
+          go-version-file: go.mod
+          cache: true
 
       - name: Build
-        run: go build -o ff ./cmd/folderflow/main.go
+        shell: bash
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.arch }}
+        run: |
+          mkdir -p dist
+          go build \
+            -trimpath \
+            -ldflags="-s -w" \
+            -o dist/ff-${{ github.ref_name }}-${{ matrix.goos }}-${{ matrix.arch }}${{ matrix.ext }} \
+            ./cmd/folderflow
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: folderflow-${{ matrix.os }}-${{ github.ref_name }}
-          path: ff${{ matrix.os == 'windows-latest' && '.exe' || '' }}
-          retention-days: 1
+          name: ${{ matrix.goos }}-${{ matrix.arch }}
+          path: dist/*
 
   release:
     needs: build
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+
     steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          path: artifacts
-      - name: Create Release
+          path: dist
+
+      - name: Generate checksums
+        run: |
+          cd dist
+          find . -type f ! -name 'checksums.txt' -exec sha256sum {} \; > checksums.txt
+
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            artifacts/folderflow-ubuntu-latest-${{ github.ref_name }}/ff
-            artifacts/folderflow-windows-latest-${{ github.ref_name }}/ff.exe
-            artifacts/folderflow-macos-latest-${{ github.ref_name }}/ff
+            dist/**
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
-          # Optionally, add release notes or description
-          body: |
-            ## Changelog
-            - Add your release notes here.
-            - Automatically built for Linux, Windows, and macOS.
