--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -26,7 +26,7 @@ jobs:
         cache: true
 
     - name: Build
-      run: go build -trimpath -ldflags="-s -w"
+      run: go build -trimpath -ldflags="-s -w" ./cmd/folderflow
 
     - name: Test
       run: go test -v ./...
