--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -48,6 +48,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.25'
+          go-version-file: go.mod
       - name: Run race detector
         run: go test -race ./...
