specify linter config file

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -35,7 +35,7 @@ jobs:
       uses: golangci/golangci-lint-action@v9
       with:
         version: latest
-        args: --timeout=5m
+        args: --config=.golangci.yml --timeout=5m
 
       
   race:
