--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -34,8 +34,8 @@ jobs:
     - name: Lint
       uses: golangci/golangci-lint-action@v9
       with:
-        version: latest
-        args: --config=.golangci.yml --timeout=5m
+        version: v2.7.2
+        args: --timeout=5m
 
       
   race:
