--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -28,7 +28,7 @@ jobs:
             exit 1
           fi
 
-      - name: Update CHANGELOG.md
+      - name: Update CHANGELOG
         run: |
           VERSION="${{ inputs.version }}"
           DATE="$(date +%Y-%m-%d)"
@@ -79,9 +79,9 @@ jobs:
               print buffer
             }
           }
-          ' CHANGELOG.md > CHANGELOG.tmp
+          ' CHANGELOG > CHANGELOG.tmp
 
-          mv CHANGELOG.tmp CHANGELOG.md
+          mv CHANGELOG.tmp CHANGELOG
 
       - name: Create release branch
         run: |
@@ -92,7 +92,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add CHANGELOG.md
+          git add CHANGELOG
           git commit -m "chore(release): ${{ inputs.version }}"
           git push origin release/${{ inputs.version }}
 
