--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,7 +58,7 @@ jobs:
             -trimpath \
             -ldflags="-s -w" \
             -o dist/ff-${{ github.ref_name }}-${{ matrix.goos }}-${{ matrix.arch }}${{ matrix.ext }} \
-            ./cmd/folderflow
+            ./cmd/ff
 
       - uses: actions/upload-artifact@v4
         with:
