--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -27,6 +27,12 @@ jobs:
             echo "Invalid SemVer version"
             exit 1
           fi
+      - name: Version documentation (Docusaurus)
+        run: |
+          cd docs
+          npm ci
+          npx docusaurus docs:version ${{ inputs.version }}
+
 
       - name: Update CHANGELOG
         run: |
@@ -87,12 +93,12 @@ jobs:
         run: |
           git checkout -b release/${{ inputs.version }}
 
-      - name: Commit changelog
+      - name: Commit changelog & documentation
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add CHANGELOG
+          git add CHANGELOG docs/versioned_docs docs/versioned_sidebars
           git commit -m "chore(release): ${{ inputs.version }}"
           git push origin release/${{ inputs.version }}
 
