--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -103,7 +103,7 @@ jobs:
           git push origin release/${{ inputs.version }}
 
       - name: Open Pull Request
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@v8
         with:
           title: "Release ${{ inputs.version }}"
           body: |
@@ -112,4 +112,4 @@ jobs:
             - Promotes `[Unreleased]` to `${{ inputs.version }}`
             - SemVer-compliant release
           base: main
-          head: release/${{ inputs.version }}
+          branch: release/${{ inputs.version }}
