Revert "Fix branch reference in release PR workflow"
This reverts commit 2448235e639aa9a5a6322faa4605a7f8cc5e82a5.

--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -108,5 +108,5 @@ jobs:
             - Promotes `[Unreleased]` to `${{ inputs.version }}`
             - SemVer-compliant release
           base: main
-          head: release/${{ inputs.version }}
+          branch: release/${{ inputs.version }}
 
