--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -97,6 +97,21 @@ jobs:
 
           mv CHANGELOG.tmp CHANGELOG
 
+      - name: Create release branch
+        run: |
+          git checkout -b release/${{ inputs.version }}
+
+
+      - name: Commit changelog & documentation
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add CHANGELOG docs/versioned_docs docs/versioned_sidebars
+          git commit -m "chore(release): ${{ inputs.version }}"
+          git push origin release/${{ inputs.version }}
+
+
       - name: Open Pull Request
         uses: peter-evans/create-pull-request@v8
         with:
