--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -107,7 +107,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add CHANGELOG docs/versioned_docs docs/versioned_sidebars
+          git add CHANGELOG docs/
           git commit -m "chore(release): ${{ inputs.version }}"
           git push origin release/${{ inputs.version }}
 
