--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -20,7 +20,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+          ref: ${{ github.ref_name }}
+      
       - name: Validate SemVer
         run: |
           if ! [[ "${{ inputs.version }}" =~ ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)$ ]]; then
@@ -97,20 +98,6 @@ jobs:
 
           mv CHANGELOG.tmp CHANGELOG
 
-      - name: Create release branch
-        run: |
-          git checkout -b release/${{ inputs.version }}
-
-
-      - name: Commit changelog & documentation
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          git add CHANGELOG docs/
-          git commit -m "chore(release): ${{ inputs.version }}"
-          git push origin release/${{ inputs.version }}
-
 
       - name: Open Pull Request
         uses: peter-evans/create-pull-request@v8
@@ -122,6 +109,6 @@ jobs:
 
             - Promotes `[Unreleased]` to `${{ inputs.version }}`
             - SemVer-compliant release
-          base: main
+          base: ${{ github.ref_name }}
           branch: release/${{ inputs.version }}
 
