--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,40 @@
-folderflow
-ff
+#Skip logs
 *.log
-test_data/
-testdata/
-!ff/
-.VSCodeCounter/
-.DS_Store
-.vscode/
 
-# Ignore environment files
+# Binaries for programs and plugins
+ff
+!ff/ 
+bin/
+build/
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Code coverage profiles and other test artifacts
+*.out
+coverage.*
+*.coverprofile
+profile.cov
+
+# Dependency directories (remove the comment below to include it)
+vendor/
+
+# Go workspace file
+go.work
+go.work.sum
+
+# env file
 .env
-.env.local
-.env.*.local
 
-test
+# Editor/IDE
+.idea/
+.vscode/
+.VSCodeCounter
+
+# OS
+.DS_Store
