update ci to run more jobs in parrallel making it's execution faster

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,9 +28,18 @@ jobs:
     - name: Build
       run: go build -trimpath -ldflags="-s -w" ./cmd/ff
 
+  test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
     - name: Test
       run: go test -v ./...
 
+  linter:
+    runs-on: ubuntu-latest
+    steps:
     - name: Lint
       uses: golangci/golangci-lint-action@v9
       with:
